#1 - 게시판 페이지의 헤더, 푸터를 분리
타임리프 템플릿 문법을 이용해서 반복이 예상되는 부분을 분리함

--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thyemleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>게시판 페이지</title>
 </head>
 <body>
 
-    <header>
-        <hr/>
-    </header>
+    <header th:replace="~{header :: header}"></header>
 
     <main>
         <form>
@@ -70,9 +68,7 @@
         </nav>
     </main>
 
-    <footer>
-        <hr/>
-    </footer>
+    <footer th:replace="footer :: footer"></footer>
 
 </body>
 </html>
