--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 
-    <header id="header"></header>
+    <header id="header">
+        헤더 삽입부
+        <hr/>
+    </header>
 
     <main class="container">
         <div class="row">
@@ -52,33 +55,33 @@
             </div>
         </div>
 
-        <table class="table">
+        <table id="article-table" class="table">
             <thead>
                 <tr>
-                    <th class="col-6">제목</th>
-                    <th class="col-2">해시태그</th>
-                    <th class="col">작성자</th>
-                    <th class="col">작성일</th>
+                    <th class="title col-6">제목</th>
+                    <th class="hashtag col-2">해시태그</th>
+                    <th class="user-id col">작성자</th>
+                    <th class="created-at col">작성일</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>첫글</td>
-                    <td>#java</td>
-                    <td>taeyeong</td>
-                    <td>2022-01-01</td>
+                    <td class="title"><a>첫글</a></td>
+                    <td class="hashtag">#java</td>
+                    <td class="user-id">taeyeong</td>
+                    <td class="created-at">2022-01-01</td>
                 </tr>
                 <tr>
-                    <td>두번째글</td>
-                    <td>#spring</td>
-                    <td>taeyeong</td>
-                    <td>2022-01-02</td>
+                    <td class="title">두번째글</td>
+                    <td class="hashtag">#spring</td>
+                    <td class="user-id">taeyeong</td>
+                    <td class="created-at"><time>2022-01-02</time></td>
                 </tr>
                 <tr>
-                    <td>세번쨰글</td>
-                    <td>#java</td>
-                    <td>taeyeong</td>
-                    <td>2022-01-03</td>
+                    <td class="title">세번째글</td>
+                    <td class="hashtag">#java</td>
+                    <td class="user-id">taeyeong</td>
+                    <td class="created-at">2022-01-03</td>
                 </tr>
             </tbody>
         </table>
@@ -95,7 +98,10 @@
 
     </main>
 
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <hr/>
+        푸터
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
