--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -15,7 +15,7 @@
 
 <header id="header">
     헤더 삽입부
-    <hr>
+    <hr/>
 </header>
 
 <main id="article-main" class="container">
@@ -26,8 +26,8 @@
     <div class="row g-5">
         <section class="col-md-3 col-lg-4 order-md-last">
             <aside>
-                <p><span id="nickname">Uno</span></p>
-                <p><a id="email" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
+                <p><span id="nickname">Taeyeong</span></p>
+                <p><a id="email" href="mailto:djkehh@gmail.com">dev.taeyeong@gmail.com</a></p>
                 <p><time id="created-at" datetime="2022-01-01T00:00:00">2022-01-01</time></p>
                 <p><span id="hashtag">#java</span></p>
             </aside>
@@ -67,7 +67,7 @@
                         <input type="hidden" class="article-id">
                         <div class="row">
                             <div class="col-md-10 col-lg-9">
-                                <strong>Uno</strong>
+                                <strong>Taeyeong</strong>
                                 <small><time>2022-01-01</time></small>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
@@ -83,7 +83,7 @@
                 <li>
                     <div class="row">
                         <div class="col-md-10 col-lg-9">
-                            <strong>Uno2</strong>
+                            <strong>Taeyeong2</strong>
                             <small><time>2022-01-01</time></small>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
@@ -119,7 +119,7 @@
 </main>
 
 <footer id="footer">
-    <hr>
+    <hr/>
     푸터 삽입부
 </footer>
 
